--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="16dp"
-            android:onClick="@{viewModel.convertButtonClicked}"
+            android:onClick="convertButtonClicked"
             android:text="@string/convert"
             android:textSize="25sp"
             app:layout_constraintBottom_toTopOf="@id/button_7"
