don't reuse result + prettified result format

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="16dp"
-            android:onClick="@{viewModel.plainButtonClicked}"
+            android:onClick="@{viewModel::plainButtonClicked}"
             android:text="@string/left_paren"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@id/button_8"
@@ -80,7 +80,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="16dp"
-            android:onClick="@{viewModel.plainButtonClicked}"
+            android:onClick="@{viewModel::plainButtonClicked}"
             android:text="@string/right_paren"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@id/button_9"
@@ -95,7 +95,7 @@
             android:layout_height="0dp"
             android:layout_marginTop="16dp"
             android:contentDescription="@string/backspace_button"
-            android:onClick="@{viewModel.backspaceButtonClicked}"
+            android:onClick="@{viewModel::backspaceButtonClicked}"
             android:src="@drawable/ic_backspace"
             app:layout_constraintBottom_toTopOf="@id/button_div"
             app:layout_constraintEnd_toEndOf="parent"
@@ -107,7 +107,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:onClick="@{viewModel.plainButtonClicked}"
+            android:onClick="@{viewModel::plainButtonClicked}"
             android:text="@string/seven"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@id/button_4"
@@ -120,7 +120,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:onClick="@{viewModel.plainButtonClicked}"
+            android:onClick="@{viewModel::plainButtonClicked}"
             android:text="@string/eight"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@id/button_5"
@@ -133,7 +133,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:onClick="@{viewModel.plainButtonClicked}"
+            android:onClick="@{viewModel::plainButtonClicked}"
             android:text="@string/nine"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@id/button_6"
@@ -146,7 +146,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:onClick="@{viewModel.plainButtonClicked}"
+            android:onClick="@{viewModel::plainButtonClicked}"
             android:text="@string/div"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@id/button_mul"
@@ -159,7 +159,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:onClick="@{viewModel.plainButtonClicked}"
+            android:onClick="@{viewModel::plainButtonClicked}"
             android:text="@string/four"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@id/button_1"
@@ -172,7 +172,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:onClick="@{viewModel.plainButtonClicked}"
+            android:onClick="@{viewModel::plainButtonClicked}"
             android:text="@string/five"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@id/button_2"
@@ -185,7 +185,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:onClick="@{viewModel.plainButtonClicked}"
+            android:onClick="@{viewModel::plainButtonClicked}"
             android:text="@string/six"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@id/button_3"
@@ -198,7 +198,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:onClick="@{viewModel.plainButtonClicked}"
+            android:onClick="@{viewModel::plainButtonClicked}"
             android:text="@string/mul"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@id/button_sub"
@@ -211,7 +211,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:onClick="@{viewModel.plainButtonClicked}"
+            android:onClick="@{viewModel::plainButtonClicked}"
             android:text="@string/one"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@id/button_0"
@@ -224,7 +224,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:onClick="@{viewModel.plainButtonClicked}"
+            android:onClick="@{viewModel::plainButtonClicked}"
             android:text="@string/two"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@id/button_dot"
@@ -237,7 +237,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:onClick="@{viewModel.plainButtonClicked}"
+            android:onClick="@{viewModel::plainButtonClicked}"
             android:text="@string/three"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@id/button_equals"
@@ -250,7 +250,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:onClick="@{viewModel.plainButtonClicked}"
+            android:onClick="@{viewModel::plainButtonClicked}"
             android:text="@string/sub"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@id/button_add"
@@ -263,7 +263,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:onClick="@{viewModel.plainButtonClicked}"
+            android:onClick="@{viewModel::plainButtonClicked}"
             android:text="@string/zero"
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -276,7 +276,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:onClick="@{viewModel.plainButtonClicked}"
+            android:onClick="@{viewModel::plainButtonClicked}"
             android:text="@string/dot"
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -289,7 +289,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:onClick="@{viewModel.equalsButtonClicked}"
+            android:onClick="@{viewModel::equalsButtonClicked}"
             android:text="@string/equals"
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -302,7 +302,7 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:onClick="@{viewModel.plainButtonClicked}"
+            android:onClick="@{viewModel::plainButtonClicked}"
             android:text="@string/add"
             android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
