--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,16 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="CalculatorButton" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+    </style>
+
+    <style name="CalculatorButton.Big">
+        <item name="android:textSize">30sp</item>
+    </style>
+
+    <style name="CalculatorButton.Small">
+        <item name="android:textSize">25sp</item>
+    </style>
 </resources>
