--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,5 +44,6 @@
         <item name="android:paddingEnd">@dimen/screen_padding_end</item>
         <item name="android:paddingTop">@dimen/screen_padding_top</item>
         <item name="android:paddingBottom">@dimen/screen_padding_bottom</item>
+        <item name="android:textColor">@android:color/black</item>
     </style>
 </resources>
